--- a/index.html
+++ b/index.html
@@ -1,16 +1,76 @@
+<!DOCTYPE html>
+
 <html>
+
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-
     <title>5280 Landmarks</title>
+
     <link rel="stylesheet" href="stylesheets/reset.css" title="text/css" />
     <link rel="stylesheet" href="stylesheets/main.css" title="text/css" />
   </head>
+
+    <header class="header">
+      <h2 id="myHeader"> 5280 Landmarks </h2>
+      <a id="login"> login </a>
+    </header>
+
+    <nav class="navigation">
+      <a>Building</a>
+      <a>Art</a>
+      <a>Featured</a>
+    </nav>
+
   <body>
+    <section class="pics">
+      <img id="museum" src="./images/1.jpg" alt="Denver Art Museum" style = "width:900px;height:700px;">
 
+      <div class="side">
+        <p>Larimer Square</p>
+        <img src="./images/2.jpg" alt="Larimer Square" style = "width:300px;height:200px;">
+        <p>Millenium Bridge</p>
+        <img src="./images/5.jpg" alt="Miliienium Bridge" style = "width:300px;height:200px;">
+        <p>Molly Brown House</p>
+        <img src="./images/6.jpg" alt="Miliienium Bridge" style = "width:300px;height:200px;">
+      </div>
+    </section>
+
+    <div>
+      <header id="lastHeader">
+        <h3>Denver Art Museum</header>
+      </header>
+      <p>
+        Lorem ipsum dolor sit amet, quis idque munere est ex. Eos id soluta meliore menandri,
+        sed ex graeci prompta sapientem. Cum in verterem partiendo, quod partiendo principes vix et.
+        Ne eam virtute abhorreant. At qui doming nemore mediocritatem, ei pri bonorum blandit,
+        vim elitr recusabo salutatus eu.
+      </p><br>
+      <p>
+        Mea adhuc persecuti in, dolorum mentitum ullamcorper his ut. Graeci scriptorem cum ea,
+        an ignota signiferumque nec. No dicunt sanctus moderatius sed, meliore inermis ei mea.
+        Utinam impedit maiestatis sea ad, quis efficiendi eu mel, ea solet placerat phaedrum vis.
+        Et vix causae aliquam, commodo blandit imperdiet ex his.
+      </p><br>
+      <p>
+        Duo an eleifend omittantur, te sint civibus recusabo eos. An ius corpora definiebas cotidieque.
+        Eu pri reque sapientem contentiones, fierent conclusionemque mei in. Saepe veniam ne mei,
+        ut facilisi omittantur nec.
+      </p><br>
+      <p>
+        Nam ad quas consul salutandi, sea ad verterem quaestio. Mei ea quot dictas.
+        Eam choro eloquentiam eu, vim cu facete scriptorem. Mel at latine veritus.
+      </p><br>
+    </div>
+
+    <footer id="footer">
+      Alia utinam maiorum pro te, eum ex sonet putent discere.
+      Mea cu possit forensibus comprehensam. Mel te primis commodo,
+      nibh labore nostrum ei mel. Ex vix adolescens suscipiantur,
+      malorum iuvaret usu id. At mea lobortis pertinacia, scripta sententiae et mei,
+      sumo partem pro ex. Nam movet facete ex, eos rebum nulla qualisque ea,
+      vis malis clita efficiantur ut. At vel lorem paulo soluta,
+      ancillae quaestio no quo, id vim blandit voluptatum.
+    </footer>
   </body>
+
 </html>
-
-
-
-
